# gilded-rose-kata

./: Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/docker/: Dockerfile
docs/: requirements.md  specifications.md
gilded_rose/: gilded_rose.py  strategies.py
src/gilded_rose/: inn.py  main.py
tests/: builder.py  builders.py  test_gilded_rose.py  test_gilded_rose_backstage_passes.py  test_gilded_rose_brie.py  test_gilded_rose_legendary.py  test_inn.py
