[project]
name = "gilded-rose-kata"
version = "0.1.0"
description = "Gilded rose kata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/gilded_rose",
]
