[project]
name = "gilded-rose-kata"
version = "0.1.0"
description = "Gilded rose kata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "radon>=6.0.1",
]

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[tool.uv]
dev-dependencies = [
    "pylint>=3.3.7",
    "pyright>=1.1.403",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "radon>=6.0.1",
    "ruff>=0.12.7",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/gilded_rose",
    "tests",
]

[tool.coverage.run]
omit = [
    "tests/**/*",
    "src/gilded_rose/main.py"
]
